# hornet

./: .coveragerc  .gitignore  LICENSE.md  Pipfile  README.md  examples.py  expressions.py  fizzbuzz.py  hanoi.py  parsing.py  pyproject.toml  pyrightconfig.json  resolver.py  run-tests  setup.cfg  setup.py  symdiff.py  system.py  testall  tmp.py  turing.py  util.py
docs/: API.md  ARCHITECTURE.md  Glossary.md  modal_logic.md
docs/org/: hornet.org  states.org  tailcalls.org
examples/: __init__.py  aircraft.py  app.py  append.py  audit.py  examples.py  fizzbuzz.py  hanoi.py  modalities.py  parsing.py  prof.py  queens.py  symdiff.py  turing.py
hornet/: __init__.py  dcg.py  demo.py  expressions.py  operators.py  strait.py  system.py  tailcalls.py  terms.py  trampoline.py  util.py
hornet/examples/: aircraft.py  eight_queens.py  examples.py  fizzbuzz.py  hanoi.py  parsing.py  prof.py  queens.py  runexample  symdiff.py  turing.py
hornet/test/: __init__.py  test_dcg.py  test_expressions.py  test_operators.py  test_symbols.py  test_terms.py
src/: _version.py  utils.py
src/examples/: aircraft.py  app.py  examples.py  fizzbuzz.py  parsing.py  prof.py  queens.py  symdiff.py  turing.py
src/hornet/: __init__.py  _builtins.py  _version.py  clauses.py  combinators.py  dcg.py  expressions.py  expressions.pyi  goals.py  lists.py  modalities.py  operators.py  states.py  symbols.py  symbols.pyi  tailcalls.py  terms.py  util.py  utils.py
src/test/: __init__.py  test_dcg.py  test_expressions.py  test_operators.py  test_symbols.py  test_terms.py
tests/: __init__.py  test_clauses.py  test_combinators.py  test_dcg.py  test_expressions.py  test_modalities.py  test_operators.py  test_states.py  test_symbols.py  test_tailcalls.py  test_terms.py
