[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "hornet"
license = { file = "LICENSE" }
authors = [
    {name = "Mick Krippendorf", email = "m.krippendorf@freenet.de"},
]
description = "Horn clauses via Expression Trees, a Prolog-like Embedded DSL for Python >=3.10"
dependencies = [
    "toolz>=0.12.0",
    "codegen>=1.0",
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pillmuncher/hornet"

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/hornet/_version.py"
versionfile_build = "src/hornet/_version.py"
tag_prefix = ""
parentdir_prefix = "hornet-"
