[project]
name = "hornet"
version = "0.2.6" # Version is managed via bump2version
license = { file = "LICENSE.md" }
authors = [{ name = "Mick Krippendorf", email = "m.krippendorf@freenet.de" }]
description = "Hornet: An embedded DSL for Logic Programming in Python."
dependencies = ["toolz", "codegen==1.0", "astor>=0.8.1"]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pillmuncher/hornet"

[tool.setuptools_scm]
# Ensure setuptools_scm manages a fallback _version.py file
write_to = "src/_version.py"

[tool.pdm]
distribution = true

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pytest.ini_options]
flake8-show-source = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true


[tool.bumpversion]
current_version = "0.2.5a"
commit = true
tag = true
files = ["_version.py"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "bumpversion",
    "coverage",
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "setuptools",
]
