[project]
name = "hornet-dsl"
version = "0.4.1a4"
license = { file = "LICENSE.md" }
authors = [{ name = "Mick Krippendorf", email = "m.krippendorf@freenet.de" }]
description = "Hornet: An embedded DSL for Logic Programming in Python."
dependencies = ["toolz", "immutables", "toolz-stubs>=0.3.1"]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pillmuncher/hornet"

[tool.pdm]
distribution = true
packages = [{ include = "hornet", from = "src" }]

[tool.pdm.scripts]
test = "pytest"

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pytest.ini_options]
flake8-show-source = true
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 99

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "coverage",
    "flake8",
    "hypothesis",
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "setuptools",
]
